<resources>

    <string name="help_title">Using Guide</string>
    <string name="help_message">Here\'s how to use this app:\n\n1. Enter the name of the artist in the search field.\n2. Click the "Search" button to find songs by the artist.\n3. Tap on a song to see more details about it.\n4. Press the "Add to Favorites" button to save the song to your favorites list.\n5. Access the menu to navigate through the app.\n6. In the Favorites list, click on a song to view its details.\n7. To remove a song from the list, press the "Delete" button.</string>
    <string name="search_button_text">Search</string>
    <string name="Click_text">Click</string>
    <string name="search_guide_text">Please enter artist here</string>
    <string name="album_name_text">Album Name</string>
    <string name="favorite_text">Add to favorite</string>
    <string name="go_back_search_text">Go back to search</string>
    <string name="title_text">Title</string>
    <string name="duration_text">Duration in sec</string>
    <string name="delete_text">Delete</string>
    <string name="favorite_list_text">FAVORITE LIST</string>
    <string name="Deezer_song_search_text">Deezer song search</string>
    <string name="error_artist">No artists found</string>
    <string name="error_fetch_data_text">Error fetching data</string>
    <string name="add_favorite_text">Added to Favorite List</string>
    <string name="close_text">Close</string>
    <string name="error_parsing_tracklist">Error parsing tracklist</string>
    <string name="error_fetch_tracklist">Error fetching tracklist</string>
    <string name="no_song_id_text">No song ID provided</string>
    <string name="song_not_found">Song not found</string>
    <string name="song_deleted_text">Song deleted</string>
    <string name="undo_text">Undo</string>
    <string name="undo_successfull_text">Undo successful</string>
    <string name="Deezer_Song">Deezer Song</string>
    <string name="app_name">FinalProjectAndroid</string>
    <string name="save">ave</string>
    <string name="help">Help</string>
    <string name="Bookmarks">BookMarks</string>
    <string name="dictionary">Dictionary</string>
    <string name="item">Item</string>
    <string name="delete">Delete</string>
    <string name="toolbar_title">Recipe Explore</string>
    <string name="search">Search</string>
    <string name="info">User Guide</string>
    <string name="my_recipe">My Recipes</string>
    <string name="toolbar_title_saved">Saved Recipes</string>
    <string name="rtitle">Title</string>
    <string name="rsummary">Summary</string>
    <string name="rurl">url</string>
    <string name="rdelete">delete recipe</string>
    <string name="rsave">save recipe</string>
    <string name="id_err">Error: Recipe ID is missing</string>
    <string name="ps_err">Error parsing recipe data</string>
    <string name="nt_err">Network error. Please try again.</string>
    <string name="et_err">Please enter a recipe name.</string>
    <string name="ec_err">Error encoding recipe name</string>
    <string name="guide_title">How to use this interface</string>
    <string name="guide_message">Here you can find instructions on how to use this interface:\n\n1. Type keyword and press \'Search\' button\n2. In results, click one item for detail.\n3. Press \'Save\' button to save recipe to your list\n4. In menu on the top right corner, you can access recipe list.\n5. In the saved recipe list, you can click one item for detail and delete it.</string>
    <string name="no_recipe">No Saved recipes found</string>
    <string name="delete_recipe_title">Delete Recipe</string>
    <string name="delete_recipe_message">Are you sure you want to delete this recipe?</string>
    <string name="delete_confirm">Delete</string>
    <string name="recipe_deleted_successfully">Recipe deleted successfully</string>
    <string name="fc_err">Error fetching recipe details</string>
    <string name="delete_no">No</string>
    <string name="delete_yes">Yes</string>
    <string name="save_recipe">Recipe Saved!</string>
    <string name="latitude_">Latitude:</string>
    <string name="enter_latitude">Enter latitude</string>
    <string name="longitude_">Longitude:</string>
    <string name="enter_longitude">Enter longitude</string>
    <string name="lookup">Lookup</string>
    <string name="sunrise_">Sunrise:\u0020</string>
    <string name="sunset_">Sunset:\u0020</string>
    <string name="location_">Location:\u0020</string>
    <string name="save_location">Save Location</string>
    <string name="view_favorites">View Favorites</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="location">Location</string>
    <string name="app_sunset_sunset_lookup">Sunrise SunSet lookup</string>
    <string name="sunrise_time">Sunrise Time</string>
    <string name="sunset_time">Sunset Time</string>
    <string name="invalid_latitude_or_longitude">Invalid latitude or longitude</string>
    <string name="location_saved_successfully">Location saved successfully</string>
    <string name="instruction_title">Help</string>
    <string name="instruction_body_welcome"><![CDATA[Welcome to the Sunrise & Sunset Lookup App! This application allows you to find the sunrise and sunset times for any location specified by its latitude and longitude.\n\n]]></string>
    <string name="instruction_body_how_to_use">How to Use:\n</string>
    <string name="instuction_body_tips">Tips:\n</string>
    <string name="instuction_body_ask_for_assistance">Should you need further assistance or encounter any issues, please feel free to contact our support team.</string>
    <string name="instuction_body_how_to_use_1">- Enter Latitude and Longitude: In the provided text fields, enter the latitude and longitude for which you wish to find sunrise and sunset times. Latitude and longitude should be in decimal format.\n</string>
    <string name="instuction_body_how_to_use_2">- Lookup Sunrise and Sunset Times: Press the \'Lookup\' button to retrieve the sunrise and sunset times for the entered location.\n</string>
    <string name="instuction_body_how_to_use_3">- Save a Location: If you wish to save the location for future reference, press the \'Save Location\' button after looking up the times. This will store the location in your favorites list.\n</string>
    <string name="instuction_body_how_to_use_4">- View Saved Locations: Click on \'View Favorites\' to see a list of all saved locations along with their sunrise and sunset times. You can click on any location in the list to view more details or delete it from the favorites.\n\n</string>
    <string name="instuction_body_tips_1">- Make sure the latitude and longitude are correct to get accurate sunrise and sunset times.\n</string>
    <string name="instuction_body_tips_2">- Use negative values for latitudes south of the equator and longitudes west of the Prime Meridian.\n\n</string>
    <string name="ok">OK</string>
    <string name="error_fetching_data">Error fetching data</string>
    <string name="error_parsing_data">Error parsing data</string>
    <string name="toolbar_app_name"><![CDATA[Sunrise & Sunset Lookup App]]></string>
    <string name="location_not_available">Location not available</string>
    <string name="location_deleted">Location deleted</string>
</resources>