<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/detailImageViewRecipe"
        android:layout_width="360dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detailTextViewRecipeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/rtitle"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginLeft="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailImageViewRecipe" />

    <TextView
        android:id="@+id/detailTextViewRecipeSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rsummary"
        android:textSize="16sp"
        android:layout_marginLeft="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailTextViewRecipeTitle" />

    <TextView
        android:id="@+id/urlDescription"
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="4dp"
        android:text="@string/rurl"
        android:textSize="12sp"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailTextViewRecipeSummary" />

    <ImageButton
        android:id="@+id/buttonSaveRecipe"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/save"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/rsave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/urlDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>